--- a/flutterapp3_multiprovider_filterapp_ecommui/pubspec.yaml
+++ b/flutterapp3_multiprovider_filterapp_ecommui/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^6.1.6
   cloud_firestore: ^4.14.0
   firebase_storage: ^11.6.0
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
